# planer

./: Cargo.toml  test-1.plan  test.json  test.plan  test.ptemplate
src/: app.rs  drag_and_drop.rs  main.rs  modal.rs  planer.rs  search.rs  solver.rs
src/planer/: calendar.rs  uuid_ref.rs
