[package]
name = "planer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
eframe = "0.19.0"
rfd = "0.10.0"
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.87"
serde_with = { version = "2.0.1", features = ["chrono", "chrono_0_4"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
